--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/react-redux": "^7.1.20",
     "cors": "^2.8.5",
     "node-sass": "^6.0.1",
-    "nodemon": "^2.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -55,6 +54,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2"
+    "@types/express": "^4.17.13",
+    "@types/react-router-dom": "^5.3.2",
+    "nodemon": "^2.0.14",
+    "ts-node": "^10.4.0"
   }
 }
