--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.10",
     "@types/react-redux": "^7.1.20",
     "cors": "^2.8.5",
+    "mongoose": "^6.0.12",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
