--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node server/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon app.js",
+    "server": "nodemon server/app.js",
     "dev": "react-scripts start"
   },
   "eslintConfig": {
