--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^17.0.10",
     "@types/react-redux": "^7.1.20",
     "cors": "^2.8.5",
+    "lodash": "^4.17.21",
     "mongoose": "^6.0.12",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.176",
     "@types/react-router-dom": "^5.3.2",
     "nodemon": "^2.0.14",
     "ts-node": "^10.4.0"
