--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "node server/app.js",
+    "start": "node server/app.js --host https://my-test-80787.herokuapp.com --port 5050",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
